# createPPT

./: .gitignore  README.md  example_input.json  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: ci.yml
src/: main.py
src/generators/: pptx_generator.py
src/models/: presentation.py  styles.py
src/services/: validator.py
src/utils/: common.py
tests/: test_core.py
